--- a/client/src/components/Chat.scss
+++ b/client/src/components/Chat.scss
@@ -98,11 +98,17 @@ $yellowColor: #ffac41;
     width: 100%;
     height: 50px;
     display: flex;
+    input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+      color: white;
+      opacity: 1; /* Firefox */
+    }
+    input:-ms-input-placeholder { /* Internet Explorer 10-11 */
+      color: white;
+    }
+    input::-ms-input-placeholder { /* Microsoft Edge */
+      color: white;
+    }
     input {
-      ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-        color: white;
-        opacity: 1; /* Firefox */
-      }
       color: white;
       width: 80%;
       text-decoration: none;
