--- a/client/src/components/Welcome.css
+++ b/client/src/components/Welcome.css
@@ -1,20 +1,20 @@
 .title {
     color: white;
-    text-align: center;
-    transform: translate(0%, -250%);
+    
     text-shadow: 2px 2px indigo;
 }
 
 .button-link {
-    color: white;
-    text-align: center;
+    background-color: white;
+    color: indigo;
     padding: 5px;
-    transform: translate(0%, -100%);
+    margin-top: 15px;
+
+    margin-right: 20px;
 }
 
 .intro {
     color: white;
-    text-align: center;
-    transform: translate(0%, -250%);
     text-shadow: 2px 2px indigo;
+    font-size: 90px;
 }
