--- a/client/src/components/Welcome.css
+++ b/client/src/components/Welcome.css
@@ -21,23 +21,27 @@
 .intro {
     color: white;
     text-shadow: 2px 2px indigo;
-    font-size: 90px;
+    font-size: 70px;
     font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+    font-weight: 600;
 }
 
 .welcome-section {
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 
 .welcome-col {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    margin-left: 40px;
+}
+
+.welcome-row {
+   padding-top: 25px;
 }
 
 .example-chat {
-    max-height: 70%;
-    width: auto;
+    width: 400px;
     box-shadow: 20px 30px 20px rgba(255,255,255, 0.8);
     -moz-box-shadow: 20px 30px 20px rgba(255,255,255, 0.8);
     -webkit-box-shadow: 20px 30px 20px rgba(255,255,255, 0.8);
