--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -5,11 +5,14 @@
     margin-bottom: 15px;
 }
 
-.privacyLink {
+.sideLink {
     padding: 5px;
     margin-top: 15px;
     margin-right: 20px;
     margin-bottom: 40px;
+    /* color: white !important;
+    border-color: rgba(255, 255, 255, 1)!important;
+    background-color: rgba(255, 255, 255, 0.2)!important; */
 }
 
 
@@ -20,9 +23,9 @@
     font-family: Futura, "Trebuchet MS", Arial, sans-serif;
 }
 
-.introVerySmall {
+.feeedbackDiv {
     color: white;
-    font-size: 18px;
+    font-size: 20px;
     text-shadow: 2px 2px indigo;
     font-family: Futura, "Trebuchet MS", Arial, sans-serif;
 }
@@ -57,6 +60,12 @@
    padding-top: 25px;
 }
 
+.linkRow {
+   padding-top: 25px;
+   align-items: center;
+   justify-content: space-between;
+}
+
 .Students {
     width: 400px;
     box-shadow: 20px 30px 20px rgba(255,255,255, 0.8);
@@ -89,4 +98,12 @@
     font-weight: 'lighter';
     color: black;
     
+}
+
+.homeDivider {
+    color:white;
+    opacity: 0.7;
+    margin-right: 20px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
